<resources>
    <string name="app_name">Vehicle Driver</string>
    <string name="vehicle_driver">Vehicle Driver</string>
    <string name="start_tracking">Start Tracking...</string>
    <string name="your_location_will_be_displayed_here">Your location will be displayed here...</string>
    <string name="start">Start</string>
    <string name="stop">stop</string>
    <string name="latitude">LATITUDE :</string>
    <string name="longitude">LONGITUDE :</string>
    <string name="settings">Settings</string>
    <string name="token">Token</string>
    <string name="server_token">Server token</string>
    <string name="or">OR</string>
    <string name="scan_qr">Scan QR</string>
</resources>
